- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.9.1
- 
    Android SDK dir: D:\Android\android-sdk
 Android NDK dir: D:\Android\android-ndk-r10e
 QTCreator: 4.3.1
 SO: Windows 10 Pro
 QT: 5.9.1
 
 
- 
        767f783d65fdd8d154167966b75525c73036e27e (qt/qttools/5.12)
When executes lupdate from QTCreator Tools menu, appears these errors:
"C:\Qt\5.9.1\android_armv7\bin\lupdate.exe" finished
Starting external tool "C:\Qt\5.9.1\android_armv7\bin\lupdate.exe" P:/src/Test.pro
El sistema no puede encontrar la ruta especificada.
__
WARNING: Project ERROR: You need to set the ANDROID_NDK_ROOT environment variable to point to your Android NDK.
WARNING: Could not read qmake configuration file C:/Qt/5.9.1/android_armv7/mkspecs/android-g++/qmake.conf.
__
"C:\Qt\5.9.1\android_armv7\bin\lupdate.exe" finished
After modify Environment lupdate configuration field with:
ANDROID_NDK_ROOT=D:\Android\android-ndk-r10e
 PATH=C:\Qt\Tools\mingw530_32\bin;C:\Qt\5.9.1\android_armv7\bin
Appears only one error:
Starting external tool "C:\Qt\5.9.1\android_armv7\bin\lupdate.exe" P:/src/Test.pro
El sistema no puede encontrar la ruta especificada.
__
WARNING: Project ERROR: Cannot run compiler 'D:\Android\android-ndk-r10e/toolchains/arm-linux-androideabi-4.9/prebuilt/windows/bin/arm-linux-androideabi-g++'. Maybe you forgot to setup the environment?
"C:\Qt\5.9.1\android_armv7\bin\lupdate.exe" finished
If put the variables directly on Windows environment variables, occurs the same.